// Auto-generated by Trenza DSL Compiler
// Compiler Profile: pre
// Concurrency Mode: threads

#[derive(Debug, Clone, Copy, PartialEq, Eq, Hash)]
pub enum Contexto {
    ModoNormal,
    ModoAlerta,
    ModoEmergencia,
    ModoFuego,
    ModoAgua,
}

use std::sync::mpsc;
use std::thread;
use std::collections::HashMap;

pub struct System {
    pub state: Contexto,
    pub concurrent_txs: HashMap<Contexto, mpsc::Sender<String>>,
}

impl System {
    pub fn new(initial: Contexto) -> Self {
        let mut concurrent_txs = HashMap::new();
        // Spawn thread for concurrent context ModoFuego
        let (tx_ModoFuego, rx_ModoFuego) = mpsc::channel::<String>();
        thread::spawn(move || {
            let mut local_state = Contexto::ModoFuego;
            while let Ok(msg) = rx_ModoFuego.recv() {
                // In a real synthesis, we would route to handle_event equivalent here
                if msg == "TERMINATE" { break; }
            }
        });
        concurrent_txs.insert(Contexto::ModoFuego, tx_ModoFuego);
        // Spawn thread for concurrent context ModoAgua
        let (tx_ModoAgua, rx_ModoAgua) = mpsc::channel::<String>();
        thread::spawn(move || {
            let mut local_state = Contexto::ModoAgua;
            while let Ok(msg) = rx_ModoAgua.recv() {
                // In a real synthesis, we would route to handle_event equivalent here
                if msg == "TERMINATE" { break; }
            }
        });
        concurrent_txs.insert(Contexto::ModoAgua, tx_ModoAgua);
        Self { state: initial, concurrent_txs }
    }

    pub fn handle_event(&mut self, event: &str) {
        // Dispatch to concurrent threads
        for tx in self.concurrent_txs.values() {
            let _ = tx.send(event.to_string());
        }

        // Evaluate main state
        match self.state {
            Contexto::ModoNormal => {
                match event {
                    "alert" => self.state = Contexto::ModoAlerta,
                    "activateFuego" => self.state = Contexto::ModoFuego,
                    "activateAgua" => self.state = Contexto::ModoAgua,
                    _ => {},
                }
            },
            Contexto::ModoAlerta => {
                match event {
                    "normal" => self.state = Contexto::ModoNormal,
                    "emerge" => self.state = Contexto::ModoEmergencia,
                    _ => {},
                }
            },
            Contexto::ModoEmergencia => {
                match event {
                    "deactivate" => self.state = Contexto::ModoNormal,
                    _ => {},
                }
            },
            Contexto::ModoFuego => {
                match event {
                    "deactivate" => self.state = Contexto::ModoNormal,
                    _ => {},
                }
            },
            Contexto::ModoAgua => {
                match event {
                    "deactivate" => self.state = Contexto::ModoNormal,
                    _ => {},
                }
            },
        }
    }
}

pub fn handle_agua_trigger(ctx: &Contexto) {
    match ctx {
        Contexto::ModoNormal => {
            println!("[telemetry] context=ModoNormal, role=agua, event=trigger");
            // ignored
        },
        Contexto::ModoAlerta => {
            println!("[telemetry] context=ModoAlerta, role=agua, event=trigger");
            // ignored
        },
        Contexto::ModoEmergencia => {
            println!("[telemetry] context=ModoEmergencia, role=agua, event=trigger");
            // ignored
        },
        Contexto::ModoFuego => {
            println!("[telemetry] context=ModoFuego, role=agua, event=trigger");
            // ignored
        },
        Contexto::ModoAgua => {
            println!("[telemetry] context=ModoAgua, role=agua, event=trigger");
            // execute accionFrio
        },
    }
}

pub fn handle_fuego_trigger(ctx: &Contexto) {
    match ctx {
        Contexto::ModoNormal => {
            println!("[telemetry] context=ModoNormal, role=fuego, event=trigger");
            // ignored
        },
        Contexto::ModoAlerta => {
            println!("[telemetry] context=ModoAlerta, role=fuego, event=trigger");
            // ignored
        },
        Contexto::ModoEmergencia => {
            println!("[telemetry] context=ModoEmergencia, role=fuego, event=trigger");
            // execute accionCalor
        },
        Contexto::ModoFuego => {
            println!("[telemetry] context=ModoFuego, role=fuego, event=trigger");
            // execute accionCalor
        },
        Contexto::ModoAgua => {
            println!("[telemetry] context=ModoAgua, role=fuego, event=trigger");
            // ignored
        },
    }
}

#[cfg(test)]
mod tests {
    use super::*;

    #[test]
    fn test_transition_ModoNormal_on_alert() {
        let mut sys = System::new(Contexto::ModoNormal);
        sys.handle_event("alert");
        assert_eq!(sys.state, Contexto::ModoAlerta);
    }

    #[test]
    fn test_transition_ModoNormal_on_activateFuego() {
        let mut sys = System::new(Contexto::ModoNormal);
        sys.handle_event("activateFuego");
        assert_eq!(sys.state, Contexto::ModoFuego);
    }

    #[test]
    fn test_transition_ModoNormal_on_activateAgua() {
        let mut sys = System::new(Contexto::ModoNormal);
        sys.handle_event("activateAgua");
        assert_eq!(sys.state, Contexto::ModoAgua);
    }

    #[test]
    fn test_transition_ModoAlerta_on_normal() {
        let mut sys = System::new(Contexto::ModoAlerta);
        sys.handle_event("normal");
        assert_eq!(sys.state, Contexto::ModoNormal);
    }

    #[test]
    fn test_transition_ModoAlerta_on_emerge() {
        let mut sys = System::new(Contexto::ModoAlerta);
        sys.handle_event("emerge");
        assert_eq!(sys.state, Contexto::ModoEmergencia);
    }

    #[test]
    fn test_transition_ModoEmergencia_on_deactivate() {
        let mut sys = System::new(Contexto::ModoEmergencia);
        sys.handle_event("deactivate");
        assert_eq!(sys.state, Contexto::ModoNormal);
    }

    #[test]
    fn test_transition_ModoFuego_on_deactivate() {
        let mut sys = System::new(Contexto::ModoFuego);
        sys.handle_event("deactivate");
        assert_eq!(sys.state, Contexto::ModoNormal);
    }

    #[test]
    fn test_transition_ModoAgua_on_deactivate() {
        let mut sys = System::new(Contexto::ModoAgua);
        sys.handle_event("deactivate");
        assert_eq!(sys.state, Contexto::ModoNormal);
    }

}
